--- a/web-style.css
+++ b/web-style.css
@@ -1,4 +1,46 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+}
+
+.p {
+  color: red;
+}
+
+.header {
+  padding: 80px;
+  text-align: center;
+  background: #1abc9c;
+}
+
+.header h1 {
+  font-size: 40px;
+  color: white;
+}
+
+.header p {
+  color: black;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+.navbar a.right {
+  float: right;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
