--- a/web-style.css
+++ b/web-style.css
@@ -44,3 +44,20 @@ body {
   background-color: #ddd;
   color: black;
 }
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.side {
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.main {
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+}
