--- a/files/web-style.css
+++ b/files/web-style.css
@@ -2,27 +2,27 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0px;
 }
+b {
+  color: #1abc9c;
+}
 
 .header {
-  padding: 80px;
+  padding: 10px;
   text-align: center;
   background: #1abc9c;
-}
-
-.header h1 {
-  font-size: 40px;
   color: white;
 }
-
+.header h1 {
+  font-size: 75px;
+}
 .header p {
-  color: black;
+  font-size: 35px;
 }
 
 .navbar {
   overflow: hidden;
   background-color: #333;
 }
-
 .navbar a {
   float: left;
   display: block;
@@ -31,14 +31,12 @@ body {
   padding: 14px 20px;
   text-decoration: none;
 }
-
 .navbar a.right {
   float: right;
 }
-
 .navbar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #1fe0ba;
+  color: white;
 }
 
 .row {
@@ -51,19 +49,16 @@ body {
   background-color: #f1f1f1;
   padding: 20px;
 }
-
 .main {
   flex: 70%;
   background-color: white;
   padding: 20px;
 }
-
 @media screen and (max-width: 500px) {
     .row {
         flex-direction: column;
     }
 }
-
 @media screen and (max-width: 400px) {
     .navbar a {
         float: none;
@@ -72,7 +67,7 @@ body {
 }
 
 .footer {
-  padding: 20px;
+  padding: 40px;
   text-align: left;
   background: #ddd;
 }
